--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Hi there!</h1>
+    </header>
 <main>
 <h1>Welcome to My Website!</h1>
 </main>
